I'm only committing this prematurely just so Lawliet can see where I fucked up with the fletching recipe code